styles/main.css
body a {
  font-family: arial,sans-serif;
  font-size: 13px;
  opacity: 0.75;
  color: #222;
  text-decoration: none;
  text-align: center;
}

a:hover {
  text-decoration: underline;
}


.header {
  vertical-align: middle;
  width: 100%;
  height: 100px;
}

.right {
  float: right;
  padding-right: 15px;
}

.left {
  padding-left: 15px;
  float: left;
}

center {
  margin: 0 auto;
}

.content {
  display: inline-block;
  position: relative;
  margin: 0 auto;
  text-align: center;
}

.logo {
  display: inline-block;
  width: 272px;
}

.buttons {
  display: inline-block;
}

input:hover {
  background-color: #f8f8f8;
  border: 1px solid #c6c6c6;
  box-shadow: 0 1px 1px rgba(0,0,0,0.1);
  color: #222;
}

.searchButton {
  color: #757575;
  height: 36px;
  line-height: 27px;
  background-image: -moz-linear-gradient(top,#f5f5f5,#f1f1f1);
  background-color: #f2f2f2;
  border: 1px solid #f2f2f2;
  border-radius: 2px;
  cursor: default;
  font-family: arial,sans-serif;
  font-size: 13px;
  font-weight: bold;
  margin: 11px 4px;
  min-width: 54px;
  padding: 0 16px;
  text-align: center;
}

.search {
  background-color: #fff;
  height: 44px;
  border-radius: 2px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16),0 0 0 1px rgba(0,0,0,0.08);
  transition: box-shadow 200ms cubic-bezier(0.4, 0.0, 0.2, 1);
  font: 16px arial,sans-serif;
  line-height: 34px;
  height: 34px !important;
}

.mic {
  float: right;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  width: 25px;
  height: 25px;
  margin-left: -36px;
  margin-top: 4px;
}

.imFeelingLucky {

}

.apps {
  width: 23px;
  height: 23px;
}

.signIn {

}

footer {
  position:fixed;
  bottom:0;
  left:0;
  right:0;
  width: 100%;
  height: 40px;
}

